assets/css/style.scss
---
---

@import "{{ site.theme }}";

/*Your custom CSS rules here */
:root {
  --primary-color: #20a0af; /* #267CB9 */
  --darker-primary-color: #006885;
  --lighter-primary-color: #89C0E7;
  --secondary-color: #e9c46a; /* Warm gold for accents */
  --text-color: #727272; /* Grey */

  --title-color: #222; /* Dark grey */
  --background-color: #fff; /* Light gray background */
  --border-color: #e5e5e5; /* Medium gray for borders */
  --hover-color: #1a7c71; /* Darker version of primary for hover states */
  --light-value: #eee;
  --medium-value: #c0c0c0;
  --white-value: #fff;
}

a {
  color: var(--primary-color);
}

a:hover{
  font-weight: unset;
  color: var(--darker-primary-color);
}

body {

  color: var(--text-color);
  background-image: url("../img/bg01.jpg");
  background-attachment: fixed ;
  background-position: bottom center;
  background-repeat: no-repeat;
  background-size: 100% auto;
  min-height: 100vh;
} 

header {
  display: grid;
  justify-content: center;
}

header img {
  display: block;
  margin: auto;
  width: 120px;
  height: 120px;
  border-radius: 50%;
  object-fit: cover;
  margin-bottom:15px;
  /* border:4px solid black; */ 

}

header h1 {
  display:block;
  text-align: center;
  margin:0 !important;
  margin-bottom: 15px;
  
}

h2, h3, h4, h5 {
  text-align: auto;
  /*color: var(--primary-color); */
}
header p {
  text-align: center;

}
.search-input {
  display: grid;
  justify-content: center;
  width: 100%;
}

.search-input input[type="text"] {
  display:grid;
  justify-content: center;
  margin:auto;
  width:200px;
  border-radius:5px;
  border-width: 1px;
  padding: 5px;
  margin-bottom: 15px;
}

.search-input ul {
  list-style-type: square;
  list-style-position: inside;
  padding-left: 0;
}


#results-container {
  text-align: left;
}


.social-links {

  margin-bottom: 15px;
  text-align: center;

}
.social-link i {
  margin-right: 8px;
  font-size: 24px;
  transition: transform 0.2s;

}

.social-link i:hover {
  transform: scale(1.1);
}

.reading-time {
  display: block;
  margin: auto;
  background-color: var(--light-value);
  border-radius: 5px;
  padding: 5px 10px;
  width: fit-content;
}


@media print, screen and (max-width: 960px) {
    header {
        padding-right: 0;
    }
}

.tags {
  margin: 0.5em 0 1.5em;
}

.tag {
  display: inline-block;
  background: var(--primary-color);
  padding: 0.2em 0.6em;
  margin-right: 0.5em;
  margin-bottom: 0.5em;
  border-radius: 5px;
  font-size: 0.8em;
  text-decoration: none;
  color: var(--white-value);
  transition: background 0.2s ease;
  cursor: pointer;
}

.tag:hover {
  background: var(--darker-primary-color);
  text-decoration: none;
}

.copylink {
  display:block;
  margin-left: auto;
  margin-right: 0;
  text-align: right;
  font-size: 24;

}

.back-to-top {
  position: fixed;
  bottom: 70px;
  right: calc((100% - 860px)/2 - 48px - 90px);
  
  width: 48px;
  height: 48px;
  border-radius: 8px;
  
  background-color: var(--medium-value);
  color: white;
  
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  
  font-size: 1.25rem;
  
  cursor: pointer;
  transition: all 0.2s ease-in-out;
  
  z-index: 999;
  
  /* Optional: initially hidden, to be shown via JS when scrolled down */
  /* opacity: 0; */
  /* visibility: hidden; */
}

.back-to-top:hover {
  color:white;
  background: var(--primary-color);
  transform: scale(1.1);
}

.back-to-top:active{
  color:white;
}

.back-to-top:focus{
  color:white;
}


/* 
 * Responsive breakpoint calculation:
 * 860px (main column width)
 * + 90px * 2 (left & right spacers)
 * + 48px * 4 (button width * 4 to maintain equal right spacing)
 * + 17px (scrollbar width)
 * = 1,247px total breakpoint
 */

@media print, screen and (max-width: calc(860px + 90px * 2 + 48px * 4 + 17px)) {
    .back-to-top {
        display: none;
    }
}

